# Ultimate-AI-Powered-Lottery-Prediction-System

./: .coverage  .cursorrules  .gitignore  LICENSE  README.md  README_SIMPLE.md  demo.py  fix_data.py  installed.txt  main.py  model_status.json  optimize_training.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_prediction.py  run_simple.py  run_xgboost_only.py  setup.py  simple_lottery.py  train_lstm_only.py
_backup/: predict_next_draw.py  predict_numbers.py  train_ensemble.py  train_lstm_only.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: algorithm_parameters.json  data_config.json  data_preparation.json  data_processing.json  data_sources.json  evaluation_config.json  model_config.json  model_config.py  model_configuration.json  prediction_settings.json  prediction_strategies.json  prediction_strategy.json
data/: fixed_lottery_data_v2.csv
logs/: catboost_feature_importance.json  lightgbm_feature_importance.json  xgboost_feature_importance.json
lottery_provide1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: __init__.py  arima_model.py  autoencoder_model.py  base.py  catboost_model.py  cnn_lstm_model.py  compatibility.py  ensemble.py  feature_engineering.py  gradient_boosting_model.py  holtwinters_model.py  knn_model.py  lightgbm_model.py  linear_model.py  lstm_model.py  meta_model.py  monitoring  optimized_training.py  prediction.py  test_model_training.py  trained_models.pkl  training.py  training_config.py  utils.py  xgboost_model.py
results/: analysis_cache.json  data_cache.pkl  (+4 more)
(+268 files in other folders)
