[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery_prediction_system"
version = "0.1"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A lottery number prediction system using ensemble ML models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.7.0",
    "tensorflow==2.12.0",
    "tensorflow-metal==1.0.0",
    "keras>=2.8.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.2",
    "catboost>=1.0.0",
    "prophet==1.1.4",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.2",
    "tqdm>=4.62.0",
    "joblib>=1.1.0",
    "optuna>=2.10.0",
    "mlflow>=2.3.0",
    "statsmodels>=0.13.0",
    "pmdarima==2.0.4",
    "shap>=0.41.0"
]

[tool.setuptools]
packages = ["models", "scripts", "utils"] 